--- a/amongus/amongus.html
+++ b/amongus/amongus.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Sator-AmongUS-Tools</title>
-<frameset cols="40%,*">
+
+<frameset cols="70%,*" name="fs">
   <frame src="amonguslog/011amonguslog.html" name="F1" FRAME Scrolling="auto" >
     <frame src="amongusgazou/amongusgazou.html" name="F2" FRAME Scrolling="auto" >
 
