--- a/amongus/index.html
+++ b/amongus/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
 <title>Sator-AmongUS-Tools</title>
-<frameset cols="50%,*">
-  <frame src="amonguslog/011amonguslog.html" name="F1" FRAME Scrolling="auto" >
-    <frame src="amongusgazou/amongusgazou.html" name="F2" FRAME Scrolling="auto" >
-
+<Frameset rows=""50px,*">
+ <Frame src="top.html" name="F0" frame scrolling="no">
+  <Frame src="amongus.html" name="F5" frame scrolling="auto">
 </frameset>
 </head>
 </html>
