--- a/amongus/amongusgazou/amongusgazou.html
+++ b/amongus/amongusgazou/amongusgazou.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 <title>フレームをまたいでフォームに入力されたデータを渡しテキストエリアに追加／表示する</title>
-<frameset rows="100px,50px,*">
-  <frame src="hidari.html" name="sub" FRAME Scrolling="no" >
+<frameset rows="50px,100px,*" name="ffs">
+
     <frame src="naka.html" name="naka" FRAME Scrolling="no" >
-  <frame src="migi.html" name="main" FRAME Scrolling="auto">
+    <frame src="tbl.html" name="tbl" FRAME Scrolling="auto" >
+      <frame src="migi.html" name="main" FRAME Scrolling="auto">
 </frameset>
 </head>
 </html>
