--- a/amongus/amonguslog/011amonguslog.html
+++ b/amongus/amonguslog/011amonguslog.html
@@ -155,7 +155,7 @@ window.onload = function(){
   
 </head>
 <!--ここからhtml---------------->
-<body bgcolor="#000000" text="#000000">
+<body bgcolor="#BDBDBD" text="#000000">
   <form name="form1" action="">
   
  
